# TrainingTask

./: .gitignore  CMakeLists.txt  Makefile  README.md  main  main.c  sanityCheck.sh
Common/: Common.h
Console/: Console.c  Console.h
GCCBuild/: CMakeLists.txt
Global/: Global.h
PrintFunction/: PrintFunction.c  PrintFunction.h
RPiBuild/: CMakeLists.txt
appLed/: appLed.c  appLed.h
appTimer/: appTimer.c  appTimer.h
fileHandler/: fileHandler.c  fileHandler.h
possixHandler/: possixHandler.c  possixHandler.h
possixOperation/: possixOperation.h  possixOperaton.c
